fix: only emit source cards whose titles are actually referenced in the answer
Previously every linkable RAG hit produced a card, so unrelated chunks
(e.g. a life-blog pulled in alongside a TalkNest answer) showed wrong
cards. Now sources_found is emitted AFTER answer generation and filters
cards via title-in-answer/question matching.